kubernetes-monitoring/nginx-manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /(metrics|homepage|index\.html|metrics\.html|conf\/file|^/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-with-metrics
            port:
              number: 80
